<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Connect 4</string>
    <string name="SelectGameDifficulty" tools:ignore="ExtraTranslation">Select Game Difficulty</string>
    <string name="SelectColor">Choose a color</string>
    <string name="SelectTheme">Select theme</string>
    <string name="OpctionEasy">Easy</string>
    <string name="OptionMedium">Medium</string>
    <string name="OpctionHard">Hard</string>
    <string name="OptionImpossible">Impossible</string>
    <string name="OptionLight">Ligth</string>
    <string name="OptionDark">Dark</string>
    <string name="record">13 - 1</string>
</resources>