<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="?attr/colorPrimary"
    android:clickable="true"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="127dp"
            android:background="@mipmap/info_foreground"
            android:onClick="showPopupWindowInfo"
            />

        <ImageButton
            android:id="@+id/rules"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginRight="127dp"
            android:onClick="showPopupWindowRules"
            android:background="@mipmap/rules_foreground" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:layout_marginVertical="10dp"
            android:background="@mipmap/settings_foreground"
            android:onClick="goSettings"
            android:orientation="horizontal" />
    </LinearLayout>


    <ImageView
        android:layout_marginTop="10dip"
        android:layout_width="187dp"
        android:layout_height="117dp"
        android:layout_gravity="center"
        android:scaleType="centerInside"
        android:src="@mipmap/ic_launcher_foreground" />


    <TextView
        android:layout_marginTop="10dip"
        android:id="@+id/text_view_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view"
        android:gravity="center_horizontal"
        android:text="@string/SelectGameDifficulty"
        android:textAlignment="center"
        android:textColor="?attr/color"
        android:textSize="22dp"/>


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioButton
            android:checked="true"
            android:id="@+id/Easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonDifClicked"
            android:textColor="?attr/color"
            android:text="Easy" />

        <RadioButton
            android:id="@+id/Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonDifClicked"
            android:text="Medium"
            android:textColor="?attr/color" />

        <RadioButton
            android:id="@+id/Hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="onRadioButtonDifClicked"
            android:text="Hard"
            android:textColor="?attr/color" />


    </RadioGroup>


    <TextView
        android:layout_marginTop="10dip"
        android:id="@+id/selection2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view"
        android:gravity="center_horizontal"
        android:text="@string/SelectColor"
        android:textAlignment="center"
        android:textColor="?attr/color"
        android:textSize="22dp" />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/fichaver"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/green"
            android:button="@null"
            android:checked="false"
            android:onClick="onRadioButtonColorClicked" />

        <RadioButton

            android:id="@+id/ficharoj"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/red"
            android:button="@null"
            android:checked="false"
            android:onClick="onRadioButtonColorClicked" />


        <RadioButton
            android:id="@+id/fichaama"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/yellow_selected"
            android:button="@null"
            android:checked="true"
            android:onClick="onRadioButtonColorClicked" />

        <RadioButton
            android:id="@+id/fichavio"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:background="@drawable/violet"
            android:button="@null"
            android:checked="false"
            android:onClick="onRadioButtonColorClicked" />

    </RadioGroup>
    </RelativeLayout>

    <TextView
        android:layout_marginTop="10dip"
        android:id="@+id/selection3"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@drawable/text_view"
        android:gravity="center_horizontal"
        android:text="@string/SelectTheme"
        android:textAlignment="center"
        android:textColor="?attr/color"
        android:textSize="22dp" />

    <RadioGroup
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton android:checked="true"
            android:id="@+id/LightTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonThemeClicked"
            android:textColor="?attr/color"
            android:text="@string/OptionLight" />

        <RadioButton
            android:id="@+id/Darktheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonThemeClicked"
            android:textColor="?attr/color"
            android:text="@string/OptionDark" />

    </RadioGroup>

    <Button
        android:layout_marginTop="20dip"
        android:id="@+id/bSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view"
        android:padding="12dp"
        android:text="Play"
        android:onClick="goGame"
        android:textColor="?attr/color"
        android:textSize="26sp" />
</LinearLayout>
